# ntp-client

./: README.en.md  README.ja.md  README.md  next.config.ts  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
public/locales/en-US/: translation.json
public/locales/ja-JP/: translation.json
public/locales/zh-Hant/: translation.json
scripts/: sign-sidecar.sh
src/: i18n.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/nsis/: hooks.nsh
src-tauri/sidecar/: Cargo.toml
src-tauri/sidecar/src/: main.rs
src-tauri/src/: autostart_elevated.rs  main.rs  ntp.rs  offset.rs  sidecar.rs  sidecar_main.rs
src-tauri/src/core/: db.rs  mod.rs  offset.rs
src-tauri/src/user/: stats.rs
src/app/: layout.tsx
src/app/history/: page.tsx
src/app/home/: page.tsx
src/components/: LanguageSwitcher.tsx
src/contexts/: HistoryContext.tsx
