[package]
name = "ntp-client"
version = "0.1.0"
description = "NTP 時間同步客戶端"
authors = ["whes1015"]
edition = "2021"
license = "AGPL-3.0"
default-run = "ntp-client"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
libc = "0.2"
tokio = { version = "1", features = ["time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
flate2 = "1.0"
bincode = "1.3"
lazy_static = "1.5"
dirs = "5.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-opener = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Time", "Win32_Security", "Win32_UI_Shell", "Win32_System_Registry", "Win32_System_Threading"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
